unpackaged/main/default/objects/Product2/fields/RICSC_ArticleType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ArticleType__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>