unpackaged/main/default/objects/Product2/fields/RICSC_BackPicture__c.field-meta.xml
<CustomField>
        <fullName>RICSC_BackPicture__c</fullName>
        <formula>IMAGE( RICSC_BackPictureURL__c , "Image not available" , 100 , 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Picture</label>
        <type>Text</type>
    </CustomField>