unpackaged/main/default/objects/Product2/fields/RICSC_BackPictureURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_BackPictureURL__c</fullName>
        <description>URL of a product back picture</description>
        <label>Back Picture URL</label>
        <type>Url</type>
    </CustomField>