unpackaged/main/default/objects/Product2/fields/RICSC_CalibrePicture__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CalibrePicture__c</fullName>
        <formula>IMAGE( RICSC_CalibrePictureURL__c , "Image not available" , 100 , 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calibre Picture</label>
        <type>Text</type>
    </CustomField>