unpackaged/main/default/objects/Product2/fields/RICSC_CalibrePictureURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CalibrePictureURL__c</fullName>
        <description>URL of a product calibre picture</description>
        <label>Calibre Picture URL</label>
        <type>Url</type>
    </CustomField>