unpackaged/main/default/objects/Product2/fields/RICSC_CaseReference__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CaseReference__c</fullName>
        <label>Case Reference</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>