unpackaged/main/default/objects/Product2/fields/RICSC_CollectionProductLine__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CollectionProductLine__c</fullName>
        <label>Collection</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>