unpackaged/main/default/objects/Product2/fields/RICSC_CustomerOrderOnly__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CustomerOrderOnly__c</fullName>
        <label>Customer order only (CCL)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>