unpackaged/main/default/objects/Product2/fields/RICSC_DialColor__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DialColor__c</fullName>
        <label>Dial Color</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>