unpackaged/main/default/objects/Product2/fields/RICSC_DialType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DialType__c</fullName>
        <label>Dial Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>