unpackaged/main/default/objects/Product2/fields/RICSC_Engravable__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Engravable__c</fullName>
        <label>Engravable</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>