unpackaged/main/default/objects/Product2/fields/RICSC_ExtCreationDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExtCreationDate__c</fullName>
        <description>Date and Time of the record creation in the source system</description>
        <label>External Creation Date</label>
        <type>Date</type>
    </CustomField>