unpackaged/main/default/objects/Product2/fields/RICSC_FiscalYear__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>