unpackaged/main/default/objects/Product2/fields/RICSC_FrontPicture__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FrontPicture__c</fullName>
        <description>Formula displaying product picture on a page based on the Product Picture URL</description>
        <formula>IMAGE( RICSC_FrontPictureURL__c , "Image not available" , 100 , 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Front Picture</label>
        <type>Text</type>
    </CustomField>