unpackaged/main/default/objects/Product2/fields/RICSC_FrontPictureURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FrontPictureURL__c</fullName>
        <description>URL of a product front picture</description>
        <label>Front Picture URL</label>
        <type>Url</type>
    </CustomField>