unpackaged/main/default/objects/Product2/fields/RICSC_Functions__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Functions__c</fullName>
        <label>Functions</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>