unpackaged/main/default/objects/Product2/fields/RICSC_Language__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>EN-UK</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>PT-BR</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>ZF</fullName>
                </value>
                <value>
                    <fullName>ZH-CN</fullName>
                </value>
                <value>
                    <fullName>ZH-HK</fullName>
                </value>
                <value>
                    <fullName>ZH-TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>