unpackaged/main/default/objects/Product2/fields/RICSC_LegalNotice__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LegalNotice__c</fullName>
        <label>Legal notice</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>