unpackaged/main/default/objects/Product2/fields/RICSC_LimitedEdition__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LimitedEdition__c</fullName>
        <label>Limited Edition</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>