unpackaged/main/default/objects/Product2/fields/RICSC_LimitedEditionType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LimitedEditionType__c</fullName>
        <label>Limited Edition Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>