unpackaged/main/default/objects/Product2/fields/RICSC_LinktoUserManual__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LinktoUserManual__c</fullName>
        <label>Link to UserManual</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>