unpackaged/main/default/objects/Product2/fields/RICSC_MainMaterial__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MainMaterial__c</fullName>
        <label>Main Material</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>