unpackaged/main/default/objects/Product2/fields/RICSC_Maison__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Maison__c</fullName>
        <description>Maison in which the product exist</description>
        <label>Maison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Maison</valueSetName>
        </valueSet>
    </CustomField>