unpackaged/main/default/objects/Product2/fields/RICSC_MarketingDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MarketingDescription__c</fullName>
        <label>Marketing Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>