unpackaged/main/default/objects/Product2/fields/RICSC_MasterProduct__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MasterProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Master Product</relationshipLabel>
        <relationshipName>RICSC_MasterProducts</relationshipName>
        <type>Lookup</type>
    </CustomField>