unpackaged/main/default/objects/Product2/fields/RICSC_MerchindiseCategory__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MerchindiseCategory__c</fullName>
        <label>Merchandise Category</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>