unpackaged/main/default/objects/Product2/fields/RICSC_ModelForRing__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ModelForRing__c</fullName>
        <label>Model for Ring</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>