unpackaged/main/default/objects/Product2/fields/RICSC_MovementDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MovementDescription__c</fullName>
        <label>Movement Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>