unpackaged/main/default/objects/Product2/fields/RICSC_MovementFunctionType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MovementFunctionType__c</fullName>
        <label>Movement Function Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>