unpackaged/main/default/objects/Product2/fields/RICSC_MovementSpecificHighlights__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MovementSpecificHighlights__c</fullName>
        <label>Movement Specific Highlights</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>