unpackaged/main/default/objects/Product2/fields/RICSC_MovementType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MovementType__c</fullName>
        <label>Movement Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>