unpackaged/main/default/objects/Product2/fields/RICSC_OrganizationCode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_OrganizationCode__c</fullName>
        <label>Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>