unpackaged/main/default/objects/Product2/fields/RICSC_PictureOfProductIfStrap__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PictureOfProductIfStrap__c</fullName>
        <formula>IMAGE( RICSC_ProductPictureIfStrapURL__c , "Image not available" , 100 , 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture of product if strap</label>
        <type>Text</type>
    </CustomField>