unpackaged/main/default/objects/Product2/fields/RICSC_ProductPictureIfStrapURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductPictureIfStrapURL__c</fullName>
        <description>URL of a product picture if strap</description>
        <label>Product Picture If Strap URL</label>
        <type>Url</type>
    </CustomField>