unpackaged/main/default/objects/Product2/fields/RICSC_ProductServiceLink__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductServiceLink__c</fullName>
        <label>Product Service Link</label>
        <type>Url</type>
    </CustomField>