unpackaged/main/default/objects/Product2/fields/RICSC_RangeStatus__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RangeStatus__c</fullName>
        <label>Range Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>