unpackaged/main/default/objects/Product2/fields/RICSC_ReferenceNumberLocalReference__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceNumberLocalReference__c</fullName>
        <label>Reference number (local reference)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>