unpackaged/main/default/objects/Product2/fields/RICSC_SAPReference__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SAPReference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SAP Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>