unpackaged/main/default/objects/Product2/fields/RICSC_Segment__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Segment__c</fullName>
        <label>Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>