unpackaged/main/default/objects/Product2/fields/RICSC_SerialNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>