unpackaged/main/default/objects/Product2/fields/RICSC_Size__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Size__c</fullName>
        <label>Size for Jewellery</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>