unpackaged/main/default/objects/Product2/fields/RICSC_SizeforWatches__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SizeforWatches__c</fullName>
        <label>Size for Watches</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>