unpackaged/main/default/objects/Product2/fields/RICSC_SpecialOrder__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SpecialOrder__c</fullName>
        <label>Special Order</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>