unpackaged/main/default/objects/Product2/fields/RICSC_StoneType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StoneType__c</fullName>
        <label>Stone Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>