unpackaged/main/default/objects/Product2/fields/RICSC_StrapDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StrapDescription__c</fullName>
        <label>Strap Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>