unpackaged/main/default/objects/Product2/fields/RICSC_StrapInterchangeability__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StrapInterchangeability__c</fullName>
        <label>Strap Interchangeability</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>