unpackaged/main/default/objects/Product2/fields/RICSC_StrapMaterial__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StrapMaterial__c</fullName>
        <label>Strap Material</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>