unpackaged/main/default/objects/Product2/fields/RICSC_StrapType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StrapType__c</fullName>
        <label>Strap Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>