unpackaged/main/default/objects/Product2/fields/RICSC_SubCollection__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SubCollection__c</fullName>
        <label>Sub Collection</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>