unpackaged/main/default/objects/Product2/fields/RICSC_Target__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>