unpackaged/main/default/objects/Product2/fields/RICSC_TechnicalCollectionProductLine__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TechnicalCollectionProductLine__c</fullName>
        <label>Technical Collection Product Line</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>