unpackaged/main/default/objects/Product2/fields/RICSC_TechnicalProductFamily__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TechnicalProductFamily__c</fullName>
        <label>Technical Product Family</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>