unpackaged/main/default/objects/Product2/fields/RICSC_TechnicalProductSegment__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TechnicalProductSegment__c</fullName>
        <label>Technical Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>