unpackaged/main/default/objects/Product2/fields/RICSC_TechnicalProductType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TechnicalProductType__c</fullName>
        <label>Technical Product Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>