unpackaged/main/default/objects/Product2/fields/RICSC_ThematicName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ThematicName__c</fullName>
        <label>Thematic Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>