unpackaged/main/default/objects/Product2/fields/RICSC_Type__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>