unpackaged/main/default/objects/Product2/fields/RICSC_TypeofCaseMaterial__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TypeofCaseMaterial__c</fullName>
        <label>Type of Case Material</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>