unpackaged/main/default/objects/Product2/fields/RICSC_TypeofDialMaterial__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TypeofDialMaterial__c</fullName>
        <label>Type of dial Material</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>