unpackaged/main/default/objects/Product2/fields/RICSC_TypeofMaterial__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TypeofMaterial__c</fullName>
        <label>Type of Material for Jewellery</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>