unpackaged/main/default/objects/Product2/fields/RICSC_WaterResistannce__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WaterResistannce__c</fullName>
        <label>Water Resistance</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>