unpackaged/main/default/objects/Product2/fields/RICSC_WorlwideDistribution__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WorlwideDistribution__c</fullName>
        <label>Worlwide distribution</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>