unpackaged/main/default/objects/Product2/recordTypes/RICSC_Jewellery.recordType-meta.xml
<RecordType>
        <fullName>RICSC_Jewellery</fullName>
        <active>true</active>
        <description>Jewellery Record Type</description>
        <label>Jewellery</label>
    </RecordType>