unpackaged/main/default/objects/Product2/recordTypes/RICSC_Watches.recordType-meta.xml
<RecordType>
        <fullName>RICSC_Watches</fullName>
        <active>true</active>
        <description>Watches Record Type</description>
        <label>Watches</label>
    </RecordType>